--- a/0-bootstrap/hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/hub/1-infra/kustomization.yaml
@@ -6,6 +6,18 @@ resources:
  #- argocd/namespaces/namespace-cloudpak.yaml
  #- argocd/namespaces/namespace-openldap.yaml
  #- argocd/namespaces/namespace-cert-manager.yaml
+
+ # Cloud Paks
+
+ # MCM
+
+ # CP4I
+
+ - argocd/namespaces/cloudpak/cp4i
+
+ # Sealed Secrets
+
+ - argocd/secrets/sealed-secrets.yaml
  
  # External Secrets
  - argocd/rbac/rbac-external-secrets.yaml
