--- a/0-bootstrap/hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/hub/1-infra/kustomization.yaml
@@ -31,18 +31,18 @@ resources:
  #- argocd/namespaces/namespace-instana-agent.yaml
 
  # Red Hat Advanced Cluster Management
- - argocd/rbac/rbac-rhacm.yaml
- - argocd/namespaces/namespace-openshift-acm.yaml
- - argocd/namespaces/namespace-openshift-acm-observability.yaml
- - argocd/namespaces/namespace-rhacm-credentials.yaml
- - argocd/namespaces/namespace-policies.yaml
- - argocd/namespaces/namespace-rhacm-clusterpools.yaml
- - argocd/namespaces/namespace-rhacm-clusterclaims.yaml
+#  - argocd/rbac/rbac-rhacm.yaml
+#  - argocd/namespaces/namespace-openshift-acm.yaml
+#  - argocd/namespaces/namespace-openshift-acm-observability.yaml
+#  - argocd/namespaces/namespace-rhacm-credentials.yaml
+#  - argocd/namespaces/namespace-policies.yaml
+#  - argocd/namespaces/namespace-rhacm-clusterpools.yaml
+#  - argocd/namespaces/namespace-rhacm-clusterclaims.yaml
  # RHACM Metal Provisioner (Not required if Hub is running on Bare-Metal)
  #- argocd/namespaces/namespace-metal-provisioner.yaml
  
  # Ansible Automation Platform
- - argocd/namespaces/namespace-ansible-automation-platform.yaml
+#  - argocd/namespaces/namespace-ansible-automation-platform.yaml
  
  # OpenShift Virtualization (Can be used to host Instana Instance)
  #- argocd/rbac/rbac-openshift-virtualization.yaml
@@ -66,7 +66,7 @@ resources:
  #- argocd/namespaces/namespace-ibm-cp4mcm.yaml
 
  # Quay Registry
- - argocd/namespaces/namespace-quay-registry.yaml
+#  - argocd/namespaces/namespace-quay-registry.yaml
  
  # OpenShift Data Foundation aka OpenShift Container Storage
  #- unneeded for IBM Cloud ROKS with ODF add-on configured
