--- a/0-bootstrap/hub/2-services/2-services.yaml
+++ b/0-bootstrap/hub/2-services/2-services.yaml
@@ -8,6 +8,8 @@ metadata:
 spec:
   sourceRepos: [] # Populated by kustomize patches in 2-services/kustomization.yaml
   destinations:
+  - namespace: cp4i
+    server: https://kubernetes.default.svc
   - namespace: kube-system
     server: https://kubernetes.default.svc 
   - namespace: tools
