--- a/0-bootstrap/hub/1-infra/1-infra.yaml
+++ b/0-bootstrap/hub/1-infra/1-infra.yaml
@@ -86,6 +86,8 @@ spec:
     server: https://kubernetes.default.svc
   - namespace: openshift-image-registry
   clusterResourceWhitelist:
+  - group: "apiextensions.k8s.io"
+    kind: CustomResourceDefinition
   - group: ""
     kind: Namespace
   - group: ""
