Fixed namespace typo

--- a/0-bootstrap/hub/2-services/argocd/instances/cloudpak/cp4i/predeploy/secrets.yaml
+++ b/0-bootstrap/hub/2-services/argocd/instances/cloudpak/cp4i/predeploy/secrets.yaml
@@ -11,7 +11,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: cp4ba
+    namespace: cp4i
     server: 'https://kubernetes.default.svc'
   project: services
   source:
