--- a/0-bootstrap/hub/1-infra/kustomization.yaml
+++ b/0-bootstrap/hub/1-infra/kustomization.yaml
@@ -7,6 +7,9 @@ resources:
  #- argocd/namespaces/namespace-openldap.yaml
  #- argocd/namespaces/namespace-cert-manager.yaml
 
+ # Security Verify
+ - argocd/namespaces/verify/namespace-verify.yaml
+ 
  # Cloud Paks
 
  # MCM
