--- a/0-bootstrap/hub/2-services/kustomization.yaml
+++ b/0-bootstrap/hub/2-services/kustomization.yaml
@@ -12,6 +12,11 @@ resources:
 
  # CloudPaks
 
+ # CP4X
+
+ - argocd/instances/cloudpak/cp4x/postdeploy/verify/secrets/verify-secrets.yaml
+ - argocd/instances/cloudpak/cp4x/postdeploy/verify/sso-integration/sso-integration.yaml
+
  # CP4I
 
  # CP4I - Operators 
