add cp4x secrets

--- a/0-bootstrap/hub/2-services/kustomization.yaml
+++ b/0-bootstrap/hub/2-services/kustomization.yaml
@@ -14,7 +14,7 @@ resources:
 
  # CP4X
 
- # - argocd/instances/cloudpak/cp4x/postdeploy/verify/secrets/verify-secrets.yaml
+ - argocd/instances/cloudpak/cp4x/postdeploy/verify/secrets/verify-secrets.yaml
  # - argocd/instances/cloudpak/cp4x/postdeploy/verify/sso-integration/sso-integration.yaml
 
  # CP4I
